--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0101.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0101.html
@@ -115,9 +115,9 @@
             <ins class="alt" title="nlp 1.00">ἄνδρας</ins>
           </span>
         </span>
-        <span id="w_20" class="ocr_word" title="bbox 1651 393 1798 437" lang="grc">
+        <span id="w_20_0" class="ocr_word" title="bbox 1651 393 1798 437">
           <span class="alternatives">
-            <ins title="nlp 2.00">μεμαξήκοι,</ins>
+            <ins class="alt" title="nlp 2.00">μεμαθήκοι,</ins>
           </span>
         </span>
       </span>
@@ -305,9 +305,14 @@
             <ins class="alt" title="nlp 1.00">αὐτοὺς</ins>
           </span>
         </span>
-        <span id="w_58" class="ocr_word" title="bbox 1023 759 1281 824" lang="grc">
+        <span id="w_58_0" class="ocr_word" title="bbox 1023 759 1281 824">
           <span class="alternatives">
-            <ins title="nlp 2.00">εἴπατέ’’</ins>
+            <ins class="alt" title="nlp 2.00">,,εἴπατέ”</ins>
+          </span>
+        </span>
+        <span id="w_58_1" class="ocr_word" title="bbox 1023 759 1281 824">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_59" class="ocr_word" title="bbox 1328 775 1454 826" lang="grc">
@@ -318,11 +323,6 @@
         <span id="w_60" class="ocr_word" title="bbox 1500 779 1667 825" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πρὸς</ins>
-          </span>
-        </span>
-        <span id="w_61" class="ocr_word" title="bbox 1715 780 1802 810" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸν</ins>
           </span>
         </span>
       </span>
@@ -508,14 +508,14 @@
             <ins class="alt" title="nlp 1.00">κατ’</ins>
           </span>
         </span>
-        <span id="w_98" class="ocr_word" title="bbox 1399 1079 1567 1120" lang="grc">
+        <span id="w_98_0" class="ocr_word" title="bbox 1399 1079 1567 1120">
           <span class="alternatives">
-            <ins title="nlp 2.00">κατ’</ins>
+            <ins class="alt" title="nlp 2.00">αὐτῶν</ins>
           </span>
         </span>
-        <span id="w_99" class="ocr_word" title="bbox 1603 1071 1801 1134" lang="grc">
+        <span id="w_98_1" class="ocr_word" title="bbox 1399 1079 1567 1120">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φθόνος</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
