--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0085.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0085.html
@@ -1580,7 +1580,7 @@
         </span>
         <span id="w_309" class="ocr_word" title="bbox 428 2898 447 2926">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">8</ins>
+            <ins title="nlp 2.00">s</ins>
           </span>
         </span>
       </span>
