--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0112.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0112.html
@@ -47,9 +47,14 @@
             <ins class="alt" title="nlp 1.00">ὁ</ins>
           </span>
         </span>
-        <span id="w_7" class="ocr_word" title="bbox 585 355 644 386" lang="grc">
+        <span id="w_7_0" class="ocr_word" title="bbox 585 355 644 386">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐπ’ ὀνόματι</ins>
+            <ins class="alt" title="nlp 2.00">ἐπ᾿</ins>
+          </span>
+        </span>
+        <span id="w_7_1" class="ocr_word" title="bbox 585 355 644 386">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ὀνόματι</ins>
           </span>
         </span>
         <span id="w_8" class="ocr_word" title="bbox 921 353 1006 384" lang="grc">
@@ -307,9 +312,9 @@
             <ins title="nlp 2.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_57" class="ocr_word" title="bbox 1807 739 1892 786" lang="grc">
+        <span id="w_57_0" class="ocr_word" title="bbox 1807 739 1892 786">
           <span class="alternatives">
-            <ins title="nlp 2.00">παρ</ins>
+            <ins class="alt" title="nlp 2.00">παμ</ins>
           </span>
         </span>
       </span>
@@ -1429,9 +1434,14 @@
             <ins class="alt" title="nlp 1.00">7</ins>
           </span>
         </span>
-        <span id="w_274" class="ocr_word" title="bbox 1423 2790 1506 2838" lang="grc">
+        <span id="w_274_0" class="ocr_word" title="bbox 1423 2790 1506 2838">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὑπ᾿ αὐτὸν</ins>
+            <ins class="alt" title="nlp 2.00">ὑπ᾿</ins>
+          </span>
+        </span>
+        <span id="w_274_1" class="ocr_word" title="bbox 1423 2790 1506 2838">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">αὐτὸν</ins>
           </span>
         </span>
         <span id="w_275" class="ocr_word" title="bbox 1728 2795 1822 2839">
