--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0091.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0091.html
@@ -142,9 +142,14 @@
             <ins class="alt" title="nlp 1.00">ἀνατολῶν</ins>
           </span>
         </span>
-        <span id="w_26" class="ocr_word" title="bbox 798 444 1102 514" lang="grc">
+        <span id="w_26_0" class="ocr_word" title="bbox 798 444 1102 514">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὁρμώμενος ,</ins>
+            <ins class="alt" title="nlp 2.00">ορμώμενος,</ins>
+          </span>
+        </span>
+        <span id="w_26_1" class="ocr_word" title="bbox 798 444 1102 514">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_27" class="ocr_word" title="bbox 1153 466 1206 497" lang="grc">
@@ -157,14 +162,9 @@
             <ins class="alt" title="nlp 1.00">γένους</ins>
           </span>
         </span>
-        <span id="w_29" class="ocr_word" title="bbox 1455 451 1706 515" lang="grc">
+        <span id="w_29_0" class="ocr_word" title="bbox 1455 451 1706 515">
           <span class="alternatives">
-            <ins title="nlp 2.00">λαμπροῦ ,</ins>
-          </span>
-        </span>
-        <span id="w_30" class="ocr_word" title="bbox 1758 470 1810 500" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
+            <ins class="alt" title="nlp 2.00">λαμπροῦ,</ins>
           </span>
         </span>
       </span>
@@ -174,9 +174,14 @@
             <ins class="alt" title="nlp 1.00">εἶδος</ins>
           </span>
         </span>
-        <span id="w_32" class="ocr_word" title="bbox 282 532 488 592" lang="grc">
+        <span id="w_32_0" class="ocr_word" title="bbox 282 532 488 592">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὡραῖος ,</ins>
+            <ins class="alt" title="nlp 2.00">ὡραῖος,</ins>
+          </span>
+        </span>
+        <span id="w_32_1" class="ocr_word" title="bbox 282 532 488 592">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_33" class="ocr_word" title="bbox 540 545 632 590" lang="grc">
@@ -204,14 +209,9 @@
             <ins class="alt" title="nlp 1.00">τὴν</ins>
           </span>
         </span>
-        <span id="w_38" class="ocr_word" title="bbox 1510 532 1673 593" lang="grc">
+        <span id="w_38_0" class="ocr_word" title="bbox 1510 532 1673 593">
           <span class="alternatives">
-            <ins title="nlp 2.00">χεῖρα ,</ins>
-          </span>
-        </span>
-        <span id="w_39" class="ocr_word" title="bbox 1722 548 1812 594" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὴν</ins>
+            <ins class="alt" title="nlp 2.00">χεῖρα,</ins>
           </span>
         </span>
       </span>
@@ -280,12 +280,7 @@
         </span>
         <span id="w_52" class="ocr_word" title="bbox 477 680 616 747" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γένος</ins>
-          </span>
-        </span>
-        <span id="w_53" class="ocr_word" title="bbox 631 697 640 706">
-          <span class="alternatives">
-            <ins title="nlp 2.00">·</ins>
+            <ins class="alt" title="nlp 2.00">γένος·</ins>
           </span>
         </span>
         <span id="w_54" class="ocr_word" title="bbox 695 700 793 730" lang="grc">
@@ -639,16 +634,11 @@
         </span>
         <span id="w_122" class="ocr_word" title="bbox 1672 1226 1813 1292" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λέλη-</ins>
+            <ins title="nlp 2.00">λέληθεν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 116 1301 1813 1371">
-        <span id="w_123" class="ocr_word" title="bbox 116 1309 212 1354" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">θεν</ins>
-          </span>
-        </span>
         <span id="w_124" class="ocr_word" title="bbox 259 1304 436 1354" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἑαυτὸν</ins>
@@ -889,9 +879,14 @@
             <ins class="alt" title="nlp 1.00">οὖν,</ins>
           </span>
         </span>
-        <span id="w_171" class="ocr_word" title="bbox 954 1711 1020 1755" lang="grc">
+        <span id="w_171_0" class="ocr_word" title="bbox 954 1711 1020 1755">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἥν</ins>
+            <ins class="alt" title="nlp 2.00">ἣν</ins>
+          </span>
+        </span>
+        <span id="w_171_1" class="ocr_word" title="bbox 954 1711 1020 1755">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_172" class="ocr_word" title="bbox 1048 1692 1263 1757" lang="grc">
@@ -907,11 +902,6 @@
         <span id="w_174" class="ocr_word" title="bbox 1587 1711 1644 1756" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῇ</ins>
-          </span>
-        </span>
-        <span id="w_175" class="ocr_word" title="bbox 1670 1695 1814 1757" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βασι-</ins>
           </span>
         </span>
       </span>
@@ -1072,14 +1062,9 @@
             <ins class="alt" title="nlp 1.00">αὐτήν</ins>
           </span>
         </span>
-        <span id="w_206_0" class="ocr_word" title="bbox 1028 2021 1163 2067">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">„</ins>
-          </span>
-        </span>
         <span id="w_206_1" class="ocr_word" title="bbox 1028 2021 1163 2067">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">οὐκ</ins>
+            <ins class="alt" title="nlp 2.00">„οὐκ</ins>
           </span>
         </span>
         <span id="w_207" class="ocr_word" title="bbox 1202 2023 1268 2063" lang="grc">
@@ -1146,16 +1131,11 @@
         </span>
         <span id="w_219" class="ocr_word" title="bbox 1674 2077 1814 2130" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀνεκ-</ins>
+            <ins title="nlp 2.00">ἀνεκφόρων</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 122 2155 1879 2224">
-        <span id="w_220" class="ocr_word" title="bbox 122 2156 293 2224" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φόρων</ins>
-          </span>
-        </span>
         <span id="w_221" class="ocr_word" title="bbox 331 2158 643 2222" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δακνομένην</ins>
@@ -1208,14 +1188,24 @@
             <ins class="alt" title="nlp 1.00">πρὸς</ins>
           </span>
         </span>
-        <span id="w_232" class="ocr_word" title="bbox 455 2254 519 2285" lang="grc">
+        <span id="w_232_0" class="ocr_word" title="bbox 455 2254 519 2285">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὅν</ins>
+            <ins class="alt" title="nlp 2.00">ὃν</ins>
           </span>
         </span>
-        <span id="w_233" class="ocr_word" title="bbox 555 2255 621 2283" lang="grc">
+        <span id="w_232_1" class="ocr_word" title="bbox 455 2254 519 2285">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἄν</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_233_0" class="ocr_word" title="bbox 555 2255 621 2283">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἂν</ins>
+          </span>
+        </span>
+        <span id="w_233_1" class="ocr_word" title="bbox 555 2255 621 2283">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_234" class="ocr_word" title="bbox 661 2239 990 2298" lang="grc">
@@ -1236,16 +1226,6 @@
         <span id="w_237" class="ocr_word" title="bbox 1534 2257 1564 2301" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἡ</ins>
-          </span>
-        </span>
-        <span id="w_238" class="ocr_word" title="bbox 1606 2237 1660 2285" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δὲ</ins>
-          </span>
-        </span>
-        <span id="w_239" class="ocr_word" title="bbox 1699 2235 1815 2295" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τέως</ins>
           </span>
         </span>
       </span>
@@ -1324,12 +1304,7 @@
         </span>
         <span id="w_254" class="ocr_word" title="bbox 1065 2401 1316 2458" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπερωτᾶν</ins>
-          </span>
-        </span>
-        <span id="w_255" class="ocr_word" title="bbox 1333 2409 1341 2419">
-          <span class="alternatives">
-            <ins title="nlp 2.00">·</ins>
+            <ins class="alt" title="nlp 2.00">ἐπερωτᾶν·</ins>
           </span>
         </span>
         <span id="w_256" class="ocr_word" title="bbox 1390 2391 1512 2443" lang="grc">
