--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0066.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0066.html
@@ -52,9 +52,14 @@
             <ins class="alt" title="nlp 1.00">οὗτος</ins>
           </span>
         </span>
-        <span id="w_8" class="ocr_word" title="bbox 1162 300 1426 369" lang="grc">
+        <span id="w_8_0" class="ocr_word" title="bbox 1162 300 1426 369">
           <span class="alternatives">
-            <ins title="nlp 2.00">Μορμάνος</ins>
+            <ins class="alt" title="nlp 2.00">Νορμάνος</ins>
+          </span>
+        </span>
+        <span id="w_8_1" class="ocr_word" title="bbox 1162 300 1426 369">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_9" class="ocr_word" title="bbox 1488 323 1540 353" lang="grc">
@@ -64,17 +69,7 @@
         </span>
         <span id="w_10" class="ocr_word" title="bbox 1582 323 1720 370" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γένος</ins>
-          </span>
-        </span>
-        <span id="w_11" class="ocr_word" title="bbox 1735 341 1748 369">
-          <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
-          </span>
-        </span>
-        <span id="w_12" class="ocr_word" title="bbox 1807 303 1916 369" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὴν</ins>
+            <ins class="alt" title="nlp 2.00">γένος,</ins>
           </span>
         </span>
       </span>
@@ -188,9 +183,14 @@
             <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_37" class="ocr_word" title="bbox 1730 534 1895 601" lang="grc">
+        <span id="w_37_0" class="ocr_word" title="bbox 1730 534 1895 601">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀφυκ-</ins>
+            <ins class="alt" title="nlp 2.00">ἀφυκτότατος,</ins>
+          </span>
+        </span>
+        <span id="w_37_1" class="ocr_word" title="bbox 1730 534 1895 601">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_38" class="ocr_word" title="bbox 1920 556 1959 590" lang="grc">
@@ -198,21 +198,11 @@
             <ins title="nlp 2.00">Ρ.</ins>
           </span>
         </span>
-        <span id="w_39" class="ocr_word" title="bbox 1981 556 1999 590">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">2</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 158 612 1898 680">
         <span id="w_40_0" class="ocr_word" title="bbox 158 614 428 680">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">5</ins>
-          </span>
-        </span>
-        <span id="w_40_1" class="ocr_word" title="bbox 158 614 428 680">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">τότατος,</ins>
           </span>
         </span>
         <span id="w_41" class="ocr_word" title="bbox 478 634 528 676" lang="grc">
@@ -403,9 +393,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 201 922 1901 991">
-        <span id="w_78" class="ocr_word" title="bbox 354 922 833 990" lang="grc">
+        <span id="w_78_0" class="ocr_word" title="bbox 354 922 833 990">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀπεσπινθηρίξετο,</ins>
+            <ins class="alt" title="nlp 2.00">ἀπεσπινθηρίζετο,</ins>
+          </span>
+        </span>
+        <span id="w_78_1" class="ocr_word" title="bbox 354 922 833 990">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_79" class="ocr_word" title="bbox 873 924 954 974" lang="grc">
@@ -431,11 +426,6 @@
         <span id="w_83" class="ocr_word" title="bbox 1444 926 1772 991" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">διοργανῶσαι</ins>
-          </span>
-        </span>
-        <span id="w_84" class="ocr_word" title="bbox 1810 945 1901 988" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὴν</ins>
           </span>
         </span>
       </span>
@@ -1026,14 +1016,14 @@
             <ins class="alt" title="nlp 1.00">οἱ</ins>
           </span>
         </span>
-        <span id="w_200" class="ocr_word" title="bbox 1525 2008 1725 2073" lang="grc">
+        <span id="w_200_0" class="ocr_word" title="bbox 1525 2008 1725 2073">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πάντες,</ins>
+            <ins class="alt" title="nlp 2.00">πάντες,</ins>
           </span>
         </span>
-        <span id="w_201" class="ocr_word" title="bbox 1772 2011 1899 2070" lang="grc">
+        <span id="w_200_1" class="ocr_word" title="bbox 1525 2008 1725 2073">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐξελθῶν</ins>
+            <ins class="alt" title="nlp 2.00">ἐξελθὼν</ins>
           </span>
         </span>
       </span>
@@ -1083,9 +1073,9 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_212" class="ocr_word" title="bbox 1922 2108 1950 2142">
+        <span id="w_212_0" class="ocr_word" title="bbox 1922 2108 1950 2142">
           <span class="alternatives">
-            <ins title="nlp 2.00">c</ins>
+            <ins class="alt" title="nlp 2.00">C</ins>
           </span>
         </span>
       </span>
@@ -1461,9 +1451,14 @@
             <ins class="alt" title="nlp 1.00">21</ins>
           </span>
         </span>
-        <span id="w_286" class="ocr_word" title="bbox 590 2810 827 2871" lang="grc">
+        <span id="w_286_0" class="ocr_word" title="bbox 590 2810 827 2871">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἄφθαλμοὺς</ins>
+            <ins class="alt" title="nlp 2.00">ἄρχεσθαι</ins>
+          </span>
+        </span>
+        <span id="w_286_1" class="ocr_word" title="bbox 590 2810 827 2871">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_287" class="ocr_word" title="bbox 859 2830 878 2859">
@@ -1486,14 +1481,9 @@
             <ins title="nlp 2.00">r:</ins>
           </span>
         </span>
-        <span id="w_291" class="ocr_word" title="bbox 1475 2811 1795 2872" lang="grc">
+        <span id="w_291_0" class="ocr_word" title="bbox 1475 2811 1795 2872">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀνεσχομενος</ins>
-          </span>
-        </span>
-        <span id="w_292" class="ocr_word" title="bbox 1825 2815 1860 2858">
-          <span class="alternatives">
-            <ins title="nlp 2.00">F</ins>
+            <ins class="alt" title="nlp 2.00">ἀνεσχόμενος</ins>
           </span>
         </span>
       </span>
