--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0086.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0086.html
@@ -457,13 +457,7 @@
         </span>
         <span id="w_88" class="ocr_word" title="bbox 521 1008 952 1075" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κατεπαγγέλλοιτο</ins>
-          </span>
-        </span>
-        <span id="w_89" class="ocr_word" title="bbox 968 1026 977 1036">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins class="alt" title="nlp 2.00">κατεπαγγέλλοιτο·</ins>
           </span>
         </span>
         <span id="w_90" class="ocr_word" title="bbox 1017 1009 1127 1076" lang="grc">
@@ -1495,16 +1489,21 @@
             <ins class="alt" title="nlp 1.00">ἡμῶν</ins>
           </span>
         </span>
-        <span id="w_293" class="ocr_word" title="bbox 1813 2736 1899 2768" lang="grc">
+        <span id="w_293_0" class="ocr_word" title="bbox 1813 2736 1899 2768">
           <span class="alternatives">
-            <ins title="nlp 2.00">πεἐγὼ</ins>
+            <ins class="alt" title="nlp 2.00">πε-</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 323 2876 1132 2937">
-        <span id="w_294" class="ocr_word" title="bbox 323 2885 373 2923">
+        <span id="w_294_0" class="ocr_word" title="bbox 323 2885 373 2923">
           <span class="alternatives">
-            <ins title="nlp 2.00">17</ins>
+            <ins class="alt" title="nlp 2.00">17</ins>
+          </span>
+        </span>
+        <span id="w_294_1" class="ocr_word" title="bbox 323 2885 373 2923">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἐγὼ</ins>
           </span>
         </span>
         <span id="w_296" class="ocr_word" title="bbox 526 2880 616 2924">
