--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0113.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0113.html
@@ -945,7 +945,7 @@
         </span>
         <span id="w_184" class="ocr_word" title="bbox 1328 1887 1409 1950" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αἱ</ins>
+            <ins title="nlp 2.00">(αἱ</ins>
           </span>
         </span>
         <span id="w_185" class="ocr_word" title="bbox 1447 1889 1502 1938" lang="grc">
@@ -1054,7 +1054,7 @@
         </span>
         <span id="w_206" class="ocr_word" title="bbox 1623 2064 1774 2094" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κατα-</ins>
+            <ins title="nlp 2.00">καταφαίνετα),</ins>
           </span>
         </span>
       </span>
@@ -1425,16 +1425,11 @@
         </span>
         <span id="w_279" class="ocr_word" title="bbox 1565 2740 1776 2786" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀποστα-</ins>
+            <ins title="nlp 2.00">ἀποστασίαν]</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 83 2796 1697 2857">
-        <span id="w_280" class="ocr_word" title="bbox 83 2801 207 2857" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σίαν]</ins>
-          </span>
-        </span>
         <span id="w_281" class="ocr_word" title="bbox 240 2817 469 2856" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοιαύτην</ins>
