--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0092.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0092.html
@@ -210,9 +210,14 @@
             <ins class="alt" title="nlp 1.00">μὲν</ins>
           </span>
         </span>
-        <span id="w_38" class="ocr_word" title="bbox 640 611 893 675" lang="grc">
+        <span id="w_38_0" class="ocr_word" title="bbox 640 611 893 675">
           <span class="alternatives">
-            <ins title="nlp 2.00">δεσπότις ,</ins>
+            <ins class="alt" title="nlp 2.00">δεσπότις,</ins>
+          </span>
+        </span>
+        <span id="w_38_1" class="ocr_word" title="bbox 640 611 893 675">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_39" class="ocr_word" title="bbox 940 615 1080 674" lang="grc">
@@ -233,11 +238,6 @@
         <span id="w_42" class="ocr_word" title="bbox 1423 625 1758 673" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εὐνούστατοι,</ins>
-          </span>
-        </span>
-        <span id="w_43" class="ocr_word" title="bbox 1799 616 1924 684" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πᾶν</ins>
           </span>
         </span>
       </span>
@@ -810,12 +810,7 @@
         </span>
         <span id="w_153" class="ocr_word" title="bbox 484 1698 764 1760" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπειπόντες</ins>
-          </span>
-        </span>
-        <span id="w_154" class="ocr_word" title="bbox 779 1737 792 1764">
-          <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins class="alt" title="nlp 2.00">ἐπειπόντες,</ins>
           </span>
         </span>
         <span id="w_155" class="ocr_word" title="bbox 832 1697 899 1760" lang="grc">
@@ -1187,14 +1182,14 @@
             <ins class="alt" title="nlp 1.00">τὰ</ins>
           </span>
         </span>
-        <span id="w_226" class="ocr_word" title="bbox 1415 2244 1748 2305" lang="grc">
+        <span id="w_226_0" class="ocr_word" title="bbox 1415 2244 1748 2305">
           <span class="alternatives">
-            <ins title="nlp 2.00">συνδόζαντα ·</ins>
+            <ins class="alt" title="nlp 2.00">συνδόξαντα·</ins>
           </span>
         </span>
-        <span id="w_227" class="ocr_word" title="bbox 1789 2240 1904 2292" lang="grc">
+        <span id="w_226_1" class="ocr_word" title="bbox 1415 2244 1748 2305">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὐδὲ</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
