--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0103.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0103.html
@@ -1256,7 +1256,7 @@
         </span>
         <span id="w_251" class="ocr_word" title="bbox 1346 2476 1550 2526" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τουτουὶ</ins>
+            <ins title="nlp 2.00">τουτουῒ</ins>
           </span>
         </span>
         <span id="w_252" class="ocr_word" title="bbox 1582 2496 1646 2526" lang="grc">
@@ -1424,7 +1424,7 @@
         </span>
         <span id="w_283" class="ocr_word" title="bbox 946 2822 994 2876" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(α</ins>
+            <ins title="nlp 2.00">α</ins>
           </span>
         </span>
         <span id="w_284" class="ocr_word" title="bbox 1013 2823 1059 2864">
