--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0093.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0093.html
@@ -569,12 +569,7 @@
         </span>
         <span id="w_108" class="ocr_word" title="bbox 581 1221 783 1289" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀνδρῶν</ins>
-          </span>
-        </span>
-        <span id="w_109" class="ocr_word" title="bbox 796 1264 806 1285">
-          <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins class="alt" title="nlp 2.00">ἀνδρῶν,</ins>
           </span>
         </span>
         <span id="w_110" class="ocr_word" title="bbox 847 1221 912 1281" lang="grc">
@@ -799,16 +794,11 @@
         </span>
         <span id="w_152" class="ocr_word" title="bbox 1661 1613 1815 1677" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἰσερ-</ins>
+            <ins title="nlp 2.00">εἰσερχόμενον</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 120 1686 1816 1755">
-        <span id="w_153" class="ocr_word" title="bbox 120 1689 327 1755" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">χόμενον</ins>
-          </span>
-        </span>
         <span id="w_154" class="ocr_word" title="bbox 380 1690 552 1738" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦτον</ins>
