--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0087.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0087.html
@@ -388,11 +388,6 @@
             <ins class="alt" title="nlp 1.00">ὑπανοίγων.</ins>
           </span>
         </span>
-        <span id="w_76" class="ocr_word" title="bbox 1171 966 1180 974">
-          <span class="alternatives">
-            <ins title="nlp 2.00">.</ins>
-          </span>
-        </span>
         <span id="w_77" class="ocr_word" title="bbox 1243 926 1288 974" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἰ</ins>
@@ -415,7 +410,7 @@
         </span>
         <span id="w_81" class="ocr_word" title="bbox 1670 920 1808 987" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">'Ρομπέρτου</ins>
+            <ins title="nlp 2.00">Ρομπέρτου</ins>
           </span>
         </span>
       </span>
@@ -759,14 +754,14 @@
             <ins class="alt" title="nlp 1.00">ἐξ</ins>
           </span>
         </span>
-        <span id="w_148" class="ocr_word" title="bbox 1410 1545 1532 1594" lang="grc">
+        <span id="w_148_0" class="ocr_word" title="bbox 1410 1545 1532 1594">
           <span class="alternatives">
-            <ins title="nlp 2.00">οἳων</ins>
+            <ins class="alt" title="nlp 2.00">Οἵων</ins>
           </span>
         </span>
-        <span id="w_149" class="ocr_word" title="bbox 1568 1546 1811 1609" lang="grc">
+        <span id="w_148_1" class="ocr_word" title="bbox 1410 1545 1532 1594">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀφορμῶν</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1295,13 +1290,7 @@
         </span>
         <span id="w_251" class="ocr_word" title="bbox 1298 2476 1395 2540" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἤδη</ins>
-          </span>
-        </span>
-        <span id="w_252" class="ocr_word" title="bbox 1412 2489 1421 2499">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins class="alt" title="nlp 2.00">ἤδη·</ins>
           </span>
         </span>
         <span id="w_253" class="ocr_word" title="bbox 1479 2494 1591 2535" lang="grc">
