--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0114.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0114.html
@@ -109,9 +109,9 @@
             <ins class="alt" title="nlp 1.00">φυλάσσοντας</ins>
           </span>
         </span>
-        <span id="w_19" class="ocr_word" title="bbox 1780 409 1884 479" lang="grc">
+        <span id="w_19_0" class="ocr_word" title="bbox 1780 409 1884 479">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἦσα</ins>
+            <ins class="alt" title="nlp 2.00">(ἦσα</ins>
           </span>
         </span>
       </span>
@@ -445,9 +445,14 @@
             <ins class="alt" title="nlp 1.00">10</ins>
           </span>
         </span>
-        <span id="w_83" class="ocr_word" title="bbox 229 1036 552 1102" lang="grc">
+        <span id="w_83_0" class="ocr_word" title="bbox 229 1036 552 1102">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀββᾶν μετά</ins>
+            <ins class="alt" title="nlp 2.00">ἀββᾶν</ins>
+          </span>
+        </span>
+        <span id="w_83_1" class="ocr_word" title="bbox 229 1036 552 1102">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">μετά</ins>
           </span>
         </span>
         <span id="w_84" class="ocr_word" title="bbox 591 1055 722 1096" lang="grc">
@@ -759,19 +764,19 @@
             <ins class="alt" title="nlp 1.00">ἐμάνθανε</ins>
           </span>
         </span>
-        <span id="w_144" class="ocr_word" title="bbox 1355 1576 1657 1644" lang="grc">
+        <span id="w_144_0" class="ocr_word" title="bbox 1355 1576 1657 1644">
           <span class="alternatives">
-            <ins title="nlp 2.00">(στράτευμα</ins>
+            <ins class="alt" title="nlp 2.00">(στράτυμα</ins>
+          </span>
+        </span>
+        <span id="w_144_1" class="ocr_word" title="bbox 1355 1576 1657 1644">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_145" class="ocr_word" title="bbox 1694 1578 1751 1626" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δὲ</ins>
-          </span>
-        </span>
-        <span id="w_146" class="ocr_word" title="bbox 1789 1585 1933 1626" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦτο</ins>
           </span>
         </span>
       </span>
@@ -833,9 +838,14 @@
             <ins title="nlp 2.00">Βαράγγους</ins>
           </span>
         </span>
-        <span id="w_159" class="ocr_word" title="bbox 820 1730 1044 1793" lang="grc">
+        <span id="w_159_0" class="ocr_word" title="bbox 820 1730 1044 1793">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">(τούτους</ins>
+          </span>
+        </span>
+        <span id="w_159_1" class="ocr_word" title="bbox 820 1730 1044 1793">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_160" class="ocr_word" title="bbox 1101 1732 1161 1797" lang="grc">
@@ -856,11 +866,6 @@
         <span id="w_163" class="ocr_word" title="bbox 1564 1730 1934 1799" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πελεκυφόρους</ins>
-          </span>
-        </span>
-        <span id="w_164" class="ocr_word" title="bbox 1957 1746 1985 1778">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Β</ins>
           </span>
         </span>
       </span>
@@ -897,7 +902,7 @@
         </span>
         <span id="w_171" class="ocr_word" title="bbox 1409 1809 1581 1871" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἔθνος</ins>
+            <ins title="nlp 2.00">(ἕθνος</ins>
           </span>
         </span>
         <span id="w_172" class="ocr_word" title="bbox 1609 1811 1663 1860" lang="grc">
