--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0558.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0558.html
@@ -54,7 +54,7 @@
         </span>
         <span id="w_8" class="ocr_word" title="bbox 1286 320 1318 363" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἢ</ins>
+            <ins title="nlp 2.00">ἤ</ins>
           </span>
         </span>
         <span id="w_9" class="ocr_word" title="bbox 1357 299 1441 349" lang="grc">
@@ -432,7 +432,7 @@
         </span>
         <span id="w_85" class="ocr_word" title="bbox 754 1002 835 1065" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἦν,</ins>
+            <ins title="nlp 2.00">ἠν,</ins>
           </span>
         </span>
         <span id="w_86" class="ocr_word" title="bbox 874 1001 918 1049" lang="grc">
@@ -1152,7 +1152,7 @@
         </span>
         <span id="w_226" class="ocr_word" title="bbox 1517 2163 1876 2227" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ἀλεξιούπολιν</ins>
+            <ins title="nlp 2.00">Ἀλεξιούποιν</ins>
           </span>
         </span>
       </span>
@@ -1330,7 +1330,7 @@
         </span>
         <span id="w_260" class="ocr_word" title="bbox 1721 2473 1875 2524" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ἀδώἄλλος</ins>
+            <ins title="nlp 2.00">Ἀδώ-</ins>
           </span>
         </span>
       </span>
@@ -1338,6 +1338,11 @@
         <span id="w_261" class="ocr_word" title="bbox 298 2655 323 2692">
           <span class="alternatives">
             <ins title="nlp 2.00">2</ins>
+          </span>
+        </span>
+        <span id="w_262" class="ocr_word" title="bbox 365 2643 506 2700" lang="grc">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 1.00">ἄλλος</ins>
           </span>
         </span>
         <span id="w_263" class="ocr_word" title="bbox 544 2664 589 2692">
@@ -1377,7 +1382,7 @@
         </span>
         <span id="w_270" class="ocr_word" title="bbox 1571 2646 1799 2704" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀρχαίους</ins>
+            <ins title="nlp 2.00">ἀρχαίονς</ins>
           </span>
         </span>
         <span id="w_271" class="ocr_word" title="bbox 1843 2646 1875 2690">
@@ -1446,7 +1451,7 @@
       <span class="ocr_line" title="bbox 188 2759 1877 2819">
         <span id="w_283" class="ocr_word" title="bbox 188 2764 255 2819">
           <span class="alternatives">
-            <ins title="nlp 2.00">(m</ins>
+            <ins title="nlp 2.00">(M</ins>
           </span>
         </span>
         <span id="w_284" class="ocr_word" title="bbox 286 2762 375 2805">
@@ -1508,7 +1513,7 @@
         </span>
         <span id="w_295" class="ocr_word" title="bbox 489 2833 532 2860">
           <span class="alternatives">
-            <ins title="nlp 2.00">r:</ins>
+            <ins title="nlp 2.00">τ:</ins>
           </span>
         </span>
         <span id="w_296" class="ocr_word" title="bbox 567 2832 697 2867" lang="grc">
@@ -1560,7 +1565,7 @@
         </span>
         <span id="w_306" class="ocr_word" title="bbox 571 2869 942 2929" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀποδυσάμενος</ins>
+            <ins title="nlp 2.00">ἀποδνσάμενος</ins>
           </span>
         </span>
         <span id="w_307" class="ocr_word" title="bbox 975 2872 1009 2917">
