--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0067.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0067.html
@@ -84,9 +84,14 @@
             <ins class="alt" title="nlp 2.00">ἀν'</ins>
           </span>
         </span>
-        <span id="w_13_1" class="ocr_word" title="bbox 385 422 451 451">
+        <span id="w_13_1_0" class="ocr_word" title="bbox 385 422 451 451">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ετος</ins>
+            <ins class="alt" title="nlp 2.00">ἔτος</ins>
+          </span>
+        </span>
+        <span id="w_13_1_1" class="ocr_word" title="bbox 385 422 451 451">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_14" class="ocr_word" title="bbox 690 399 933 466" lang="grc">
@@ -102,11 +107,6 @@
         <span id="w_16" class="ocr_word" title="bbox 1334 399 1571 465" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δυνάμεις</ins>
-          </span>
-        </span>
-        <span id="w_17" class="ocr_word" title="bbox 1629 401 1806 460" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἱκανὰς</ins>
           </span>
         </span>
       </span>
@@ -168,9 +168,14 @@
             <ins class="alt" title="nlp 1.00">ἐστι</ins>
           </span>
         </span>
-        <span id="w_29_0" class="ocr_word" title="bbox 783 575 873 604">
+        <span id="w_29_0_0" class="ocr_word" title="bbox 783 575 873 604">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">κατ'</ins>
+            <ins class="alt" title="nlp 2.00">κατ᾿</ins>
+          </span>
+        </span>
+        <span id="w_29_0_1" class="ocr_word" title="bbox 783 575 873 604">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_29_1" class="ocr_word" title="bbox 783 575 873 604">
@@ -191,11 +196,6 @@
         <span id="w_32" class="ocr_word" title="bbox 1482 551 1620 620" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">σῶμά</ins>
-          </span>
-        </span>
-        <span id="w_33" class="ocr_word" title="bbox 1659 573 1804 619" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φημι,</ins>
           </span>
         </span>
       </span>
@@ -744,9 +744,14 @@
             <ins class="alt" title="nlp 1.00">συνεχεῖς</ins>
           </span>
         </span>
-        <span id="w_142" class="ocr_word" title="bbox 985 1564 1365 1629" lang="grc">
+        <span id="w_142_0" class="ocr_word" title="bbox 985 1564 1365 1629">
           <span class="alternatives">
-            <ins title="nlp 2.00">μηχνώμενος,</ins>
+            <ins class="alt" title="nlp 2.00">μηχανώμενος,</ins>
+          </span>
+        </span>
+        <span id="w_142_1" class="ocr_word" title="bbox 985 1564 1365 1629">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_143" class="ocr_word" title="bbox 1407 1561 1498 1627" lang="grc">
@@ -757,11 +762,6 @@
         <span id="w_144" class="ocr_word" title="bbox 1540 1566 1614 1613" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὧν</ins>
-          </span>
-        </span>
-        <span id="w_145" class="ocr_word" title="bbox 1653 1563 1809 1627" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἔριδές</ins>
           </span>
         </span>
       </span>
@@ -823,9 +823,14 @@
             <ins class="alt" title="nlp 1.00">ῥηθεὶς</ins>
           </span>
         </span>
-        <span id="w_157" class="ocr_word" title="bbox 330 1720 583 1784" lang="grc">
+        <span id="w_157_0" class="ocr_word" title="bbox 330 1720 583 1784">
           <span class="alternatives">
-            <ins title="nlp 2.00">Γελίλεμος</ins>
+            <ins class="alt" title="nlp 2.00">Γελίελμος</ins>
+          </span>
+        </span>
+        <span id="w_157_1" class="ocr_word" title="bbox 330 1720 583 1784">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_158" class="ocr_word" title="bbox 623 1738 648 1768" lang="grc">
@@ -851,11 +856,6 @@
         <span id="w_162" class="ocr_word" title="bbox 1435 1717 1646 1782" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δυνάμει</ins>
-          </span>
-        </span>
-        <span id="w_163" class="ocr_word" title="bbox 1684 1714 1807 1765" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κατὰ</ins>
           </span>
         </span>
       </span>
@@ -1167,9 +1167,9 @@
             <ins class="alt" title="nlp 1.00">αὐτοπροσώπως</ins>
           </span>
         </span>
-        <span id="w_224" class="ocr_word" title="bbox 1578 2262 1811 2326" lang="grc">
+        <span id="w_224_0" class="ocr_word" title="bbox 1578 2262 1811 2326">
           <span class="alternatives">
-            <ins title="nlp 2.00">διαπρεσβεύεται,</ins>
+            <ins class="alt" title="nlp 2.00">διαπρεσβεύεται,</ins>
           </span>
         </span>
       </span>
