--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0104.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0104.html
@@ -932,7 +932,7 @@
         </span>
         <span id="w_178" class="ocr_word" title="bbox 1177 1783 1353 1851" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὑμᾶς</ins>
+            <ins title="nlp 2.00">,,ὑμᾶς</ins>
           </span>
         </span>
         <span id="w_179" class="ocr_word" title="bbox 1380 1786 1515 1849" lang="grc">
@@ -1221,7 +1221,7 @@
         </span>
         <span id="w_235" class="ocr_word" title="bbox 708 2329 868 2394" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κώμη</ins>
+            <ins title="nlp 2.00">(κώμη</ins>
           </span>
         </span>
         <span id="w_236" class="ocr_word" title="bbox 916 2329 971 2378" lang="grc">
